--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ body .full-pal-img {
 body .full-pal-img img {
   max-width: 100%;
   min-width: 100%;
-  height: 20rem;
+  height: 22rem;
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 0;
@@ -91,7 +91,7 @@ body main {
 }
 
 .restaurants {
-  background-color: lightgray;
+  background-color: whitesmoke;
 }
 
 .restaurants a {
@@ -121,6 +121,10 @@ body main {
   -webkit-box-shadow: 0.1em 0.1em 0.1em 0.1em lightgray;
           box-shadow: 0.1em 0.1em 0.1em 0.1em lightgray;
   margin-bottom: 1rem;
+  width: 98%;
+  min-width: 98%;
+  max-width: 98%;
+  position: relative;
 }
 
 .restaurants .rest-wrapper .rest-card img {
@@ -173,9 +177,9 @@ body main {
   background-color: #99E2D0;
   display: inline-block;
   padding: 0.5rem 2rem 0.5rem 2rem;
-  position: relative;
-  bottom: 17rem;
-  left: 14rem;
+  position: absolute;
+  bottom: 15rem;
+  left: 11rem;
 }
 
 .book-menu {
@@ -208,6 +212,8 @@ body main {
 
 .how {
   padding: 1rem;
+  white-space: wrap;
+  overflow: hidden;
 }
 
 .how .how-it {
@@ -244,6 +250,12 @@ body main {
   font-size: medium;
   font-weight: bold;
   text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .how button:hover {
@@ -262,7 +274,7 @@ body main {
   left: -2rem;
 }
 
-.how .how-list::before {
+.how .how-list1::before {
   content: "1";
   position: relative;
   top: 0.1rem;
@@ -275,91 +287,128 @@ body main {
   border-radius: 50%;
 }
 
-.head-container {
+.how .how-list2::before {
+  content: "2";
+  position: relative;
+  top: 0.1rem;
+  left: -3.5rem;
+  background-color: #9356DC;
+  padding: 0.5rem;
+  color: white;
+  font-weight: lighter;
+  font-size: medium;
+  border-radius: 50%;
+}
+
+.how .how-list3::before {
+  content: "3";
+  position: relative;
+  top: 0.1rem;
+  left: -3.5rem;
+  background-color: #9356DC;
+  padding: 0.5rem;
+  color: white;
+  font-weight: lighter;
+  font-size: medium;
+  border-radius: 50%;
+}
+
+.main-head-container {
   height: 11.5rem;
 }
 
-.head-container .logo {
+.main-head-container .logo {
   text-align: center;
   padding: 1rem;
 }
 
-.head-container .location {
+.main-head-container .location {
   text-align: center;
   background-color: lightgray;
   padding: 1rem;
 }
 
-.head-container .location i {
+.main-head-container .location i {
   padding-right: 0.5rem;
 }
 
 .foot {
-  background-color: black;
+  background-color: #282828;
   color: white;
   padding: 1rem;
+  width: 100%;
 }
 
 .foot img {
-  width: 30%;
+  width: 150px;
+  height: 1.5rem;
   -webkit-filter: invert(100%);
           filter: invert(100%);
+}
+
+.foot .suggest {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.foot .fas {
+  color: white;
+  margin-right: 0.5rem;
+}
+
+.foot .partner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .foot p {
   padding-bottom: 0.2rem;
 }
 
-@media screen and (min-width: 280px) {
+.foot a {
+  text-decoration: none;
+  color: white;
+}
+
+@media screen and (min-width: 321px) and (max-width: 480px) {
+  .restaurants .rest-wrapper .rest-wrap .rest-card {
+    min-width: 98%;
+    max-width: 98%;
+  }
   .restaurants .rest-wrapper .rest-wrap .rest-card .new {
     position: relative;
     bottom: 17rem;
-    left: 10rem;
-    padding: 0.3rem 1.5rem 0.3rem 1.5rem;
+    left: 11rem;
   }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 480px) and (max-width: 540px) {
   .restaurants .rest-wrapper .rest-wrap .rest-card .new {
     position: relative;
     bottom: 17rem;
-    left: 12rem;
+    left: 20rem;
   }
 }
 
-@media screen and (min-width: 360px) {
+@media screen and (min-width: 540px) and (max-width: 640px) {
   .restaurants .rest-wrapper .rest-wrap .rest-card .new {
     position: relative;
     bottom: 17rem;
-    left: 14rem;
+    left: 24rem;
   }
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 640px) and (max-width: 768px) {
   .restaurants .rest-wrapper .rest-wrap .rest-card .new {
     position: relative;
     bottom: 17rem;
-    left: 15rem;
+    left: 29rem;
   }
 }
 
-@media screen and (min-width: 400px) {
-  .restaurants .rest-wrapper .rest-wrap .rest-card .new {
-    position: relative;
-    bottom: 17rem;
-    left: 17rem;
-  }
-}
-
-@media screen and (min-width: 540px) {
-  .restaurants .rest-wrapper .rest-wrap .rest-card .new {
-    position: relative;
-    bottom: 17rem;
-    left: 23rem;
-  }
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .how .how-btn {
     height: 100px;
     -webkit-box-orient: horizontal;
@@ -395,15 +444,55 @@ body main {
     display: inline-block;
     width: 47%;
     margin-left: 10px;
+    min-width: 48%;
+    max-width: 48%;
   }
   .restaurants .rest-wrapper .rest-wrap .rest-card .new {
     position: relative;
     bottom: 17rem;
-    left: 14.5rem;
+    left: 14rem;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
+  .how .how-btn {
+    height: 100px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .how button {
+    width: 30%;
+  }
+  .restaurants .rest-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .restaurants .rest-wrapper .rest-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 1rem;
+  }
+  .restaurants .rest-wrapper .rest-wrap .rest-card {
+    display: inline-block;
+    width: 47%;
+    margin-left: 10px;
+    min-width: 48%;
+    max-width: 48%;
+  }
   .restaurants .rest-wrapper .rest-wrap .rest-card .new {
     position: relative;
     bottom: 17rem;
@@ -411,7 +500,45 @@ body main {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+  .how .how-btn {
+    height: 100px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .how button {
+    width: 30%;
+  }
+  .restaurants .rest-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .restaurants .rest-wrapper .rest-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 1rem;
+  }
+  .restaurants .rest-wrapper .rest-wrap .rest-card {
+    display: inline-block;
+    width: 47%;
+    margin-left: 10px;
+    min-width: 48%;
+    max-width: 48%;
+  }
   .restaurants .rest-wrapper .rest-wrap .rest-card .new {
     position: relative;
     bottom: 17rem;
@@ -419,11 +546,94 @@ body main {
   }
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1400px) and (max-width: 1600px) {
+  .how .how-btn {
+    height: 100px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .how button {
+    width: 30%;
+  }
+  .restaurants .rest-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .restaurants .rest-wrapper .rest-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 1rem;
+  }
+  .restaurants .rest-wrapper .rest-wrap .rest-card {
+    display: inline-block;
+    width: 47%;
+    margin-left: 10px;
+    min-width: 48%;
+    max-width: 48%;
+  }
   .restaurants .rest-wrapper .rest-wrap .rest-card .new {
     position: relative;
     bottom: 17rem;
-    left: 32rem;
+    left: 31rem;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .how .how-btn {
+    height: 100px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .how button {
+    width: 30%;
+  }
+  .restaurants .rest-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .restaurants .rest-wrapper .rest-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 1rem;
+  }
+  .restaurants .rest-wrapper .rest-wrap .rest-card {
+    display: inline-block;
+    min-width: 48%;
+    max-width: 48%;
+    margin-left: 10px;
+  }
+  .restaurants .rest-wrapper .rest-wrap .rest-card .new {
+    position: relative;
+    bottom: 17rem;
+    left: 36rem;
   }
 }
 
@@ -432,18 +642,23 @@ body .head-container a {
   color: black;
 }
 
+body .head-container .logo {
+  text-align: center;
+  padding: 1rem;
+}
+
 body .head-container .back-btn {
   position: absolute;
   left: 1rem;
   text-decoration: none;
 }
 
-main {
+.rest {
   background-color: whitesmoke;
-  border-radius: 40px;
+  border-radius: 40px 40px 0 0;
 }
 
-main .fp-title {
+main .rest-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -453,36 +668,36 @@ main .fp-title {
   padding-top: 2rem;
 }
 
-main .fp-title .target {
+main .rest-title .target {
   position: relative;
   bottom: 1rem;
 }
 
-main .fp-title .target:hover .heart2 {
+main .rest-title .target:hover .heart2 {
   opacity: 100%;
   color: #9356DC;
 }
 
-main .fp-title .target:hover .heart3 {
+main .rest-title .target:hover .heart3 {
   opacity: 0;
   -webkit-transition: opacity 2s;
   transition: opacity 2s;
 }
 
-main .fp-title .heart2 {
+main .rest-title .heart2 {
   opacity: 0;
   -webkit-transition: opacity 2s;
   transition: opacity 2s;
 }
 
-main .fp-title h1 {
+main .rest-title h1 {
   font-family: 'Shrikhand', cursive;
   font-weight: 900;
   font-size: 1.8rem;
   margin-left: 1rem;
 }
 
-.fp-menu {
+.rest-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -496,7 +711,15 @@ main .fp-title h1 {
   padding: 1rem;
 }
 
-.fp-menu .ent {
+.rest-menu .items .underline {
+  width: 3rem;
+  height: 0.2rem;
+  margin-left: 0.2rem;
+  margin-top: 0.3rem;
+  background-color: #99E2D0;
+}
+
+.rest-menu .ent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -508,28 +731,42 @@ main .fp-title h1 {
   margin-top: 1rem;
 }
 
-.fp-menu .ent .ent-txt {
+.rest-menu .ent .ent-txt {
   width: 100%;
   padding: 0.5rem;
   -webkit-transition: all 500ms ease-in-out;
   transition: all 500ms ease-in-out;
 }
 
-.fp-menu .ent .ent-txt h3 {
+.rest-menu .ent .ent-txt h3 {
   font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.fp-menu .ent .ent-txt:hover + .slide-tick {
+.rest-menu .ent .ent-txt .desc {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.rest-menu .ent .ent-txt:hover + .slide-tick {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
   visibility: visible;
 }
 
-.fp-menu .ent .ent-txt:hover {
+.rest-menu .ent .ent-txt:hover + .slide-tick .icon-rotate {
+  -webkit-animation: rotation 1s normal linear;
+          animation: rotation 1s normal linear;
+}
+
+.rest-menu .ent .ent-txt:hover {
   width: 90%;
 }
 
-.fp-menu .ent .price-wrap {
+.rest-menu .ent .price-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -538,7 +775,7 @@ main .fp-title h1 {
           justify-content: space-between;
 }
 
-.fp-menu .ent .slide-tick {
+.rest-menu .ent .slide-tick {
   display: inline-block;
   color: white;
   height: 3.6rem;
@@ -555,13 +792,35 @@ main .fp-title h1 {
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
   visibility: hidden;
-  -webkit-transition: -webkit-transform 500ms ease-in-out;
-  transition: -webkit-transform 500ms ease-in-out;
-  transition: transform 500ms ease-in-out;
-  transition: transform 500ms ease-in-out, -webkit-transform 500ms ease-in-out;
+  -webkit-transition: -webkit-transform 1s ease-in-out;
+  transition: -webkit-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
 }
 
-.fp-menu .items {
+@-webkit-keyframes rotation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.rest-menu .items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -576,12 +835,12 @@ main .fp-title h1 {
           animation: growDown 4s ease-in-out;
 }
 
-.fp-menu .items .item-title {
+.rest-menu .items .item-title {
   margin-top: 2rem;
   margin-left: 0.2rem;
 }
 
-.fp-menu .order button {
+.rest-menu .order button {
   padding: 1rem 4rem 1rem 4rem;
   margin-top: 3rem;
   margin-bottom: 3rem;
