--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -5,6 +5,11 @@
     .logo {
         text-align: center;
         padding: 1rem;
+        
+        img {
+            width: 200px;
+            height: auto;
+        }
     }
 
     .location {
