--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -28,6 +28,7 @@ body {
       animation: spin 2s linear infinite;
       position: fixed;
       z-index: 5;
+      overflow: show;
       margin: auto;
       top: 0;
       left: 0;
